second  question added

--- a/blog.html
+++ b/blog.html
@@ -100,6 +100,21 @@
 
         </article>
 
+        <article class="my-4">
+            <h3>Question-2: What is the difference between Global scope and Block scope ?</h3>
+            <h3>Answer :</h3>
+            <h4>Local Scope</h4>
+            <p>Local scope is also known as block scope. A block is the code found inside a set of curly braces {}.
+                Inside those curly braces we typically write out the business logic for our functions, statements and so
+                on.Variable declared using let and const can not be used outside the scope.</p>
+            <h4>Global Scope</h4>
+            <p>In Global Scope, variables are declared outside of blocks or outside the local scope. These variables are
+                called global variables. Because global variables are not bound inside a block, they can be accessed by
+                any code in the program, including code in blocks.</p>
+
+
+        </article>
+
     </main>
 
 
