fourth  question added

--- a/blog.html
+++ b/blog.html
@@ -158,6 +158,26 @@
 
         </article>
 
+        <article class="my-5">
+            <h3>Question-4: How we can get undefine in JavaScript ?
+            </h3>
+            <h3>Answer :</h3>
+            <h4>Causes for undefine</h4>
+            <p>There are 8 ways to get an undefine in JavaScript.Those are given below :</p>
+            <ol>
+                <li>variable that is not initialized</li>
+                <li>function with no return</li>
+                <li>parameter that is not passed will be undefined</li>
+                <li>If return without any value will cause undefined</li>
+                <li>Property that does not exists on an object will be undefined</li>
+                <li>Accessing array elements outside the array limit</li>
+                <li>Deleting any element inside array cause undefined</li>
+                <li>Set a value directly to undefine</li>
+            </ol>
+
+
+        </article>
+
 
     </main>
 
