--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 
     </header>
     <main class="container my-5">
-        <article>
+        <article class="bg-info">
             <h3>Question-1: What is the difference between Local storage and Session storage ?</h3>
             <h3>Answer :</h3>
             <p>
@@ -57,7 +57,7 @@
                 .demo th {
                     border: 1px solid #C0C0C0;
                     padding: 5px;
-                    background: #F0F0F0;
+
                 }
 
                 .demo td {
@@ -100,7 +100,7 @@
 
         </article>
 
-        <article class="my-4">
+        <article class="my-4 bg-warning">
             <h3>Question-2: What is the difference between Global scope and Block scope ?</h3>
             <h3>Answer :</h3>
             <h4>Local Scope</h4>
@@ -114,7 +114,7 @@
 
 
         </article>
-        <article class="my-4">
+        <article class="my-4 bg-light">
             <h3>Question-3: How does JavaScript Eventloop work ?</h3>
             <h3>Answer :</h3>
             <h4>The Event Loop Working Procedure</h4>
@@ -150,7 +150,7 @@
                 The event loop facilitates this process; it constantly checks whether or not the call stack is empty. If
                 it is empty, new functions are added from the event queue. If it is not, then the current function call
                 is processed.</p>
-            <img class="img-fluid mt-2" src="eventloop.png" alt="">
+            <img class=" img-fluid mt-2" src="eventloop.png" alt="">
 
             <h5 class="text-center mt-3">Figure : JavaScript Eventloop</h5>
 
@@ -158,7 +158,7 @@
 
         </article>
 
-        <article class="my-5">
+        <article class="my-5 bg-warning">
             <h3>Question-4: How we can get undefine in JavaScript ?
             </h3>
             <h3>Answer :</h3>
