--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 
     </header>
     <main class="container my-5">
-        <article class="bg-info">
+        <article class="bg-info p-3 rounded">
             <h3>Question-1: What is the difference between Local storage and Session storage ?</h3>
             <h3>Answer :</h3>
             <p>
@@ -100,7 +100,7 @@
 
         </article>
 
-        <article class="my-4 bg-warning">
+        <article class="my-4 bg-warning p-3 rounded">
             <h3>Question-2: What is the difference between Global scope and Block scope ?</h3>
             <h3>Answer :</h3>
             <h4>Local Scope</h4>
@@ -114,7 +114,7 @@
 
 
         </article>
-        <article class="my-4 bg-light">
+        <article class="my-4 bg-light p-3 rounded">
             <h3>Question-3: How does JavaScript Eventloop work ?</h3>
             <h3>Answer :</h3>
             <h4>The Event Loop Working Procedure</h4>
@@ -158,7 +158,7 @@
 
         </article>
 
-        <article class="my-5 bg-warning">
+        <article class="my-5 bg-warning p-3 rounded">
             <h3>Question-4: How we can get undefine in JavaScript ?
             </h3>
             <h3>Answer :</h3>
